undo overflow "fix"

--- a/css/style.css
+++ b/css/style.css
@@ -500,5 +500,4 @@ a {
 #swiper1, #swipeHome {
     max-height: 250px;
     max-width: 1288px;
-    overflow: hidden;
 }
